ChangeLog for package rkwarddev

changes in version 0.08-2 (2016-02-27)
unreleased:
  - this release is under development
fixed:
  - rk.uniqueIDs() was using lists internally in some cases which caused an
    unneccessary warning
  - rk.XML.formula() was missing the label attribute (also missing in the
    documentation)
  - rk.JS.scan() omitted <formula> nodes
changed:
  - internal function get.IDs() now uses new internal function
    filter.relevant.tags()
  - function rk.JS.scan() now has a new mode switch and supports scanning for
    <preview /> nodes
  - handling of previews was changed; using "doPrintout" is deprecated now,
    but still works. most scripts should still do without changes, allthough
    the JS code lokks different now
  - improved output of rk.JS.doc()
  - improved the handling of <frame> nodes in JS code: previously id() just
    returned the camelCode id of frames, you had to manually define an object
    outside rk.paste.JS() via rk.JS.vars(<frame object>, modifiers="checked").
    the default is now to add the checked modifier, since using frames in JS
    is most likely useless otherwise. i.e., you now need to manually call via
    rk.JS.vars(<frame object>) with no modifiers if you happen to need the
    frame's ID for whatever reason
added:
  - new parameters "mode", "placement", "active" and "id.name" in
    rk.XML.preview()
  - new parameter "preview" in rk.JS.doc() to force adding a preview()
    function
  - rk.plugin.component() and rk.plugin.skeleton() now support "preview" in
    both the "js" option and the "scan" option
  - new options "preview" and "level" in rk.JS.saveobj()
  - id() gained the new attribute "guess.modifier" to toggle the new default
    for <frame> nodes in JS (see above)

changes in version 0.08-1 (2015-12-17)
fixed:
  - attribute "max_precision" in <spinbox> was misspelled
  - rk.XML.connect() still handled modifiers for "governor" wrong if it
    wasn't a XiMpLe node